# RichRDF

./: .gitignore  README.md  pyproject.toml  setup.py  setup.sh
docs/: Benchmarks.md  Examples.md  README.md  Utils.md
examples/RecParticles/: RecPart_notebook.ipynb  RecPart_python.py  convet.sh
examples/pi0Decay_MCParticles/: Pi0Decay_notebook.ipynb  Pi0Decay_python.py  analyzeEvent.cpp  convet.sh
examples/pi0Decay_MCParticlesSkimmed/: Pi0Decay_notebook.ipynb  Pi0Decay_python.py  analyzeEvent.cpp
examples/printMetadata/: convet.sh  printMetadata_notebook.ipynb  printMetadata_python.py
richrdf/: Evaluate.py  FlattenNpArray.py  LazyAsNumpy.py  ReadEvent.py  RichRDF.py  __init__.py  include.py
richrdf/cpp_include/: rrdf.h
richrdf/cpp_include/rrdf/: ana.h  edmutils.h  gen_pdgid.py  pdgid.h  pdgidutils.h  podioevt.h
richrdf/cpp_include/rrdf/ana/: demangle.h  exception.h  format.h  range.h  span.h  split.h
richrdf/experimental/: __init__.py  generate_cpp_config_json.py  misc.py  setupROOT.py
sphinx_docs/: conf.py  generate_doc.sh
tests/testMemoryLeak/: Test_notebook.ipynb  Test_python.py  convet.sh  measure.sh  readPlotMemUsage.py
